<resources>
    <string name="app_name">MedocHub</string>
    <string name="logo">Logo de l\'application</string>
    <string name="sign_in">se connecter</string>
    <string name="sign_up">s\'inscrire</string>
    <string name="loading">chargement...</string>
    <string name="title_sign_in">S\'identifier</string>
    <string name="title_sign_up">S\'inscrire</string>
    <string name="ID">Nom d\'utilisateur</string>
    <string name="IDexample">JejeF</string>
    <string name="password">Mot de passe</string>
    <string name="password_example">mot de passe</string>
    <string name="forgot_password">mot de passe oublié ?</string>
    <string name="confirm">valider</string>
    <string name="no_account">vous n\'avez pas de compte ? </string>
    <string name="last_name">Nom</string>
    <string name="last_name_example">Fessy</string>
    <string name="first_name">Prénom</string>
    <string name="first_name_example">Jerome</string>
    <string name="email_example">jerome.fessy@u-paris.fr</string>
    <string name="email">Adresse email</string>
    <string name="confirm_password">Confirmer mot de passe</string>
    <string name="already_register">vous avez déjà un compte ?</string>
    <string name="report_medicine">Signaler un médicament manquant</string>
    <string name="see_medicine">Consulter les médicaments signalés</string>
    <string name="settings">Paramètres</string>
    <string name="change_language">changer la langue</string>
    <string name="change_password">modifier mot de passe</string>
    <string name="disconnect">se déconnecter</string>
    <string name="delete_account">supprimer le compte</string>
    <string name="contact_support">contacter le support</string>
    <string name="back_main_page">Retour à l\'accueil</string>
    <string name="profile">Profil</string>
    <string name="last_name_profile">Nom :</string>
    <string name="first_name_profile">Prénom :</string>
    <string name="email_profile">E-mail :</string>
    <string name="change_information">Modifier les informations</string>
    <string name="CIP">Code CIP</string>
    <string name="cip_example">3400930244906</string>
    <string name="cancel">annuler</string>
    <string name="qrcode_button">Scannez le QR Code</string>
</resources>