<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/dark_blue"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/logo" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="35dp"
                android:text="@string/title_sign_in"
                android:textColor="@color/white"
                android:textSize="40sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="40dp"
            android:paddingTop="15dp"
            android:background="@color/rusty_orange">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"
                android:text="@string/ID"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text"
                android:gravity="center"
                android:hint="@string/IDexample"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:inputType="text"
                tools:ignore="Autofill"
                android:nextFocusForward="@id/password"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/password"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text"
                android:gravity="center"
                android:hint="@string/password_example"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_horizontal"
                android:includeFontPadding="false"
                android:text="@string/forgot_password"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/infoconexion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/dark_green"
                android:text="@string/confirm"
                android:textColor="@color/black"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingBottom="80dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/no_account"
                    android:textColor="@color/black"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/nothaveaccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_up"
                    android:textColor="@color/blue" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>