<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/dark_blue"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/logo" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="35dp"
                android:text="@string/title_sign_up"
                android:textColor="@color/white"
                android:textSize="40sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/rusty_orange"
            android:orientation="vertical"
            android:paddingHorizontal="40dp"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/ID"
                android:textSize="17sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text"
                android:gravity="center"
                android:hint="@string/IDexample"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:inputType="text"
                android:maxLength="15"
                tools:ignore="Autofill"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/lastname"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingEnd="5dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/last_name"
                        android:textSize="17sp"
                        android:textColor="@color/black"/>
                    <EditText
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/edit_text"
                        android:gravity="center"
                        android:hint="@string/last_name_example"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_grey"
                        android:inputType="text"
                        android:maxLength="10"
                        tools:ignore="Autofill"
                        android:imeOptions="actionNext"
                        android:nextFocusForward="@id/firstname"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="5dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/first_name"
                        android:textSize="17sp"
                        android:textColor="@color/black"/>

                    <EditText
                        android:id="@+id/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/edit_text"
                        android:gravity="center"
                        android:hint="@string/first_name_example"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_grey"
                        android:inputType="text"
                        android:maxLength="10"
                        tools:ignore="Autofill"
                        android:imeOptions="actionNext"
                        android:nextFocusForward="@id/email"/>
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/email"
                android:textSize="17sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text"
                android:gravity="center"
                android:hint="@string/email_example"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/password"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/password"
                android:textSize="17sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text"
                android:gravity="center"
                android:hint="@string/password_example"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:inputType="textPassword"
                tools:ignore="Autofill"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/confirmpassword"/>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/confirm_password"
                android:textSize="17sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text"
                android:gravity="center"
                android:hint="@string/password_example"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/infoconexion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/red"/>

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/dark_green"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/black"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/already_register"
                    android:textColor="@color/black"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/haveaccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sign_in"
                    android:textColor="@color/blue" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>