<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddMedicineActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rusty_orange"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/dark_blue">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ppf" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/logo" />

            <ImageView
                android:id="@+id/settings"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/settings" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="170dp"
                android:layout_marginBottom="6dp"
                android:gravity="center"
                android:text="@string/CIP"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/cip"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text"
                android:gravity="center"
                android:hint="@string/cip_example"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:inputType="text"
                tools:ignore="Autofill" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:height="60dp"
                    android:backgroundTint="@color/light_green"
                    android:text="@string/confirm"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:height="60dp"
                    android:backgroundTint="@color/light_green"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/qrcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="60dp"
                    android:height="60dp"
                    android:backgroundTint="@color/light_green"
                    android:text="@string/qrcode_button"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>